feat: Add complete user profile system with order history, reviews, and ratings

--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -1116,14 +1116,14 @@
         <span class="user-greeting" id="user-greeting">Hi, Maria!</span>
         <button
           class="profile-btn"
-          onclick="window.location.href='../../profile/html/user_profile.html'"
+          onclick="window.location.href='user_profile.html'"
         >
           <i class="fas fa-user"></i>
         </button>
       </div>
       <button
         class="mobile-profile-btn"
-        onclick="window.location.href='../../profile/html/user_profile.html'"
+        onclick="window.location.href='user_profile.html'"
       >
         <i class="fas fa-user"></i>
       </button>
