--- a/user/html/recommender.html
+++ b/user/html/recommender.html
@@ -3103,14 +3103,14 @@
         <span class="user-greeting" id="user-greeting">Hi, Maria!</span>
         <button
           class="profile-btn"
-          onclick="window.location.href='../../profile/html/user_profile.html'"
+          onclick="window.location.href='user_profile.html'"
         >
           <i class="fas fa-user"></i>
         </button>
       </div>
       <button
         class="mobile-profile-btn"
-        onclick="window.location.href='../../profile/html/user_profile.html'"
+        onclick="window.location.href='user_profile.html'"
       >
         <i class="fas fa-user"></i>
       </button>
