--- a/admin/html/recommendation-insights.html
+++ b/admin/html/recommendation-insights.html
@@ -1015,6 +1015,34 @@ document.addEventListener('DOMContentLoaded', function() {
     setupFilterButtons();
 });
 
+// --- Mobile Sidebar Toggle Logic ---
+    const hamburgerBtn = document.getElementById('hamburgerBtn');
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebarOverlay');
+
+    if (hamburgerBtn && sidebar && sidebarOverlay) {
+        hamburgerBtn.addEventListener('click', function() {
+            sidebar.classList.toggle('mobile-open');
+            sidebarOverlay.classList.toggle('active');
+        });
+
+        sidebarOverlay.addEventListener('click', function() {
+            sidebar.classList.remove('mobile-open');
+            sidebarOverlay.classList.remove('active');
+        });
+
+        // Optional: Close sidebar if a nav link is clicked (prevents it staying open)
+        const navLinks = sidebar.querySelectorAll('.nav-link');
+        navLinks.forEach(link => {
+            link.addEventListener('click', function() {
+                if (sidebar.classList.contains('mobile-open')) {
+                    sidebar.classList.remove('mobile-open');
+                    sidebarOverlay.classList.remove('active');
+                }
+            });
+        });
+    }
+
 // Setup filter buttons
 function setupFilterButtons() {
     // Time filter buttons (for Product Recommendation Performance section)
