--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Admin Dashboard - Beauty & Blessed</title>
+  <title>Admin Dashboard - Blessence</title>
+  <link rel="icon" href="../images/mainlogo.png" type="image/png">
 
   <!-- External Stylesheets -->
   <link rel="stylesheet" href="../styles/styles.css">
@@ -209,7 +210,6 @@
       background: white !important;
     }
 
-
     .placeholder-box::before {
       content: '';
       position: absolute;
@@ -280,7 +280,6 @@
       height: 100px;
     }
 
-
     .btn-group .btn:hover {
       border-color: var(--primary-pink);
       color: var(--dark-pink);
@@ -344,7 +343,15 @@
     }
 
     /* Dynamic content styles */
-    .product-item,
+    .product-item {
+      transition: all 0.3s ease;
+      border: 1px solid rgba(228, 151, 170, 0.1);
+      background: rgb(242, 226, 230) !important;
+      border-radius: 10px;
+      margin-bottom: 12px;
+      padding: 16px !important;
+    }
+
     .customer-item,
     .insight-item {
       transition: all 0.3s ease;
@@ -625,7 +632,6 @@
 
       main {
         padding: 25px !important;
-        /* Dynamic padding-top handled by JS */
       }
     }
 
@@ -684,7 +690,6 @@
 
       main {
         padding: 20px !important;
-        /* Dynamic padding-top handled by JS */
       }
 
       .panel-section h6 {
@@ -699,7 +704,6 @@
     @media (max-width: 575px) {
       .chart-container {
         height: 480px !important;
-        /* Increased height for mobile */
         padding: 15px 12px !important;
         margin-bottom: 20px;
         min-height: 420px;
@@ -873,7 +877,7 @@
           <a href="admin.html">
             <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
           </a>
-          <div class="store-name">Beauty & Blessed</div>
+          <div class="store-name">Blessence</div>
         </div>
         <div class="nav flex-column">
           <a href="admin.html" class="nav-link">
@@ -1404,13 +1408,11 @@
         container.innerHTML = products.map((product, index) => `
         <div class="product-item d-flex align-items-center justify-content-between p-3 mb-2" style="background: #f8f9fa; border-radius: 10px; animation: fadeInUp 0.5s ease ${index * 0.1}s both;">
             <div class="d-flex align-items-center">
-                <span class="rank-badge me-3" style="background: var(--primary-pink); color: white; width: 24px; height: 24px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.8rem; font-weight: bold;">${index + 1}</span>
                 <div>
                     <div class="product-name fw-bold" style="color: var(--dark-pink);">${product.product_name}</div>
                     <small class="text-muted">${product.Category || 'N/A'} • ${product.total_quantity || 0} sold</small>
                 </div>
             </div>
-            <span class="badge" style="background: var(--secondary-pink); color: white;">${product.units_sold || 0}</span>
         </div>
         `).join('');
       };
@@ -1587,11 +1589,10 @@
       };
 
       // --- Initializations ---
-      new ChartFilterSystem(); // Initialize chart system first
-      fetchDashboardData(); // Fetch all other dashboard data
+      new ChartFilterSystem(); 
+      fetchDashboardData(); 
 
-      // Refresh non-chart data every 5 minutes
-      setInterval(fetchDashboardData, 300000); // 5 minutes
+      setInterval(fetchDashboardData, 300000); 
 
       highlightActiveNavLink();
     });
