--- a/admin/html/customer-managemnet.html
+++ b/admin/html/customer-managemnet.html
@@ -13,6 +13,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <script src="../../admin/styles/logout.js"></script>
+  
+  <!-- SweetAlert2 CSS & JS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+
   <style>
     :root {
       --primary-pink: #e497aa;
@@ -639,8 +645,8 @@
             <i class="fa-solid fa-clock-rotate-left"></i>
             <span>Activity Log</span>
           </a>
-          <a href="../../index.php" class="nav-link">
-            <i class="fa-solid fa-gear"></i>
+          <a id="logoutBtn" href="javascript:void(0)" class="nav-link">
+            <i class="fa-solid fa-right-from-bracket"></i>
             <span>Log Out</span>
           </a>
         </div>
